Done booking, booking detail, approve, pendding, cancel booking admin

--- a/Lab_Management.v1/src/main/resources/static/css/styles.css
+++ b/Lab_Management.v1/src/main/resources/static/css/styles.css
@@ -1,7 +1,7 @@
 @import url('https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css');
 body {
     font-family: Arial, sans-serif;
-    background-image: url(Images/bglogin.jpg);
+    /*background-image: url(Images/bglogin.jpg);*/
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
