--- a/Lab_Management.v1/src/main/resources/templates/index.html
+++ b/Lab_Management.v1/src/main/resources/templates/index.html
@@ -8,8 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" ></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" ></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" ></script>
-    <script src="https://cdn.jsdelivr.net/momentjs/2.29.1/moment.min.js"></script>
-    <script src="js/script.js"></script>
+    <!--<script src="https://cdn.jsdelivr.net/momentjs/2.29.1/moment.min.js"></script>-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" >
     <link rel="stylesheet" href="/css/base2.min.css">
     <link rel="stylesheet" href="css/styles.css">
@@ -22,8 +21,19 @@
             <div class="col-12">
                 <form action="#" >
                     <div class="form-group choose-datetime">
+                        <!--<div class="form-control div-icon" style="margin: auto">
+                            <i class="fa fa-angle-double-left"></i>
+                        </div>-->
                         <label for="date" style="color: black; padding: 10px; font-weight: bold;font-size: 2em;">Chọn ngày:</label>
                         <input type="date" id="date" class="form-control" style="max-width: 20em">
+                        <!--<div class="form-control" style="margin: auto">
+                            <i class="fa fa-angle-double-right "></i>
+                        </div>-->
+                    </div>
+                    <div class="alert bg-danger-subtle" id="next-day">
+                        <div style="margin: auto" class="alert bg-danger-subtle">
+                            <span class="text-status text-danger-emphasis" >Mời chọn từ ngày tiếp theo</span>
+                        </div>
                     </div>
                     <!--<button type="submit" class="btn btn-primary">Đặt lịch</button>-->
                     <div class="choose-room d-flex justify-content-around align-content-center">
@@ -81,7 +91,16 @@
         var username = [[${#authentication.name}]];
         var dateAndStatusLabsList = [[${dateAndStatusLabsList}]];
         var currentDate = [[${currentDate}]];
+        Nextday(currentDate);
         setIndex(username,dateAndStatusLabsList, currentDate);
+        /**
+         * đặt $('.alert-link').click ở sau setIndex thì mới chạy
+         * */
+        $('.alert-link').click(function () {
+            var dateValue = $("#date").val();
+            var labId = $(this).attr('value');
+            window.location.href = "/Lab/LabDetail/" + labId + "?date=" + (dateValue) + "&username=" + encodeURIComponent(username);
+        });
     });
 </script>
 <script src="js/index.js"></script>
