--- a/Lab_Management.v1/src/main/resources/templates/managers/account-info.html
+++ b/Lab_Management.v1/src/main/resources/templates/managers/account-info.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <title>Thông tin tài khoản</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/Header.css">
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!--<link rel="stylesheet" href="/css/Header.css">-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="/js/header.js"></script>
     <script src="/js/headernew/headernew.js"></script>
@@ -115,7 +113,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bcryptjs@2.4.3/dist/bcrypt.min.js"></script>
 
     <script th:inline="javascript">
+            $('.container-xxxl').removeClass('container')
         $(document).ready(function () {
+
             $('#eye, #eye-slash').click(function() {
                 togglePasswordVisibility();
             });
@@ -186,7 +186,7 @@
 
 <br>
 <br>
-<div th:replace="footer :: footer"></div>
+<!--<div th:replace="footer :: footer"></div>-->
 
 </body>
 </html>
